:sparkles: Create menu-title component

--- a/Projetos/The-Blog/angular.json
+++ b/Projetos/The-Blog/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "The-Blog": {
+    "Cine-Blog": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/the-blog",
+            "outputPath": "dist/cine-blog",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "The-Blog:build:production"
+              "buildTarget": "Cine-Blog:build:production"
             },
             "development": {
-              "buildTarget": "The-Blog:build:development"
+              "buildTarget": "Cine-Blog:build:development"
             }
           },
           "defaultConfiguration": "development"
